kubernetes/media/prowlarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  ports:
    - port: 9696
      protocol: TCP
      targetPort: http
  selector:
    app: prowlarr
  sessionAffinity: ClientIP
  type: ClusterIP
