kubernetes/media/prowlarr/ingress.yml
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-certificate
